# cpplint-rs

./: .gitattributes  Cargo.toml  LICENSE  README.md  justfile  plan.md
.github/workflows/: bench.yml  release.yml  rust.yml
.jules/: bolt.md
crates/cpplint-cli/: Cargo.toml
crates/cpplint-cli/src/: commands.rs  main.rs  options.rs
crates/cpplint-cli/tests/: cli_golden_test.rs
crates/cpplint-core/: Cargo.toml
crates/cpplint-core/benches/: cleanse.rs  quantlib.rs  test_line_utils.rs
crates/cpplint-core/examples/: hotpath_profile.rs
crates/cpplint-core/src/: c_headers.rs  categories.rs  cleanse.rs  config.rs  diagnostics.rs  errors.rs  facts.rs  file_linter.rs  file_reader.rs  fixer.rs  glob.rs  lib.rs  line_utils.rs  options.rs  output.rs  regex_utils.rs  registry.rs  runner.rs  source.rs  state.rs  string_utils.rs  suppressions.rs
crates/cpplint-core/src/checks/: copyright.rs  headers.rs  mod.rs  readability.rs  runtime.rs  whitespace.rs
crates/cpplint-core/tests/: lint_rules_test.rs
docs/: rules.md
scratch/: test_macro.rs
scripts/: benchmark.sh
tests/: lint_rules_test.rs
tests/golden/: crlf.txt  invalid_utf.txt  nullbytes.txt  string_utils.txt  string_utils_h.txt
