[workspace]
members = ["crates/cpplint-core", "crates/cpplint-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["nakashimahikaru <nakashimahikaru@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/nakashima-hikaru/cpplint-rs"
rust-version = "1.94"
publish = false

[workspace.dependencies]
# Core utilities
aho-corasick = "1.1"
regex = { version = "1.12", features = [
    "perf-dfa",
    "perf-inline",
    "perf-literal",
    "perf-onepass",
    "perf-backtrack",
] }
thiserror = "2.0"
memchr = "2.8"

# ripgrep ecosystem
ignore = { version = "0.4", features = ["simd-accel"] }
globset = { version = "0.4", features = ["simd-accel"] }
encoding_rs_io = "0.1"
unicode-width = "0.2"
parking_lot = "0.12"
fxhash = "0.2"

# CLI & Concurrency
clap = { version = "4.6", features = ["derive"] }
rayon = "1.12.0"

# Testing & Benchmarking
criterion = "0.8"
hotpath = "0.15"

[profile.release]
lto = "fat"
codegen-units = 1
